<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#fff"
    tools:context=".MainActivity">

    <TextView
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Sign up"
        android:textStyle="bold"
        android:textSize="26sp"
        android:textColor="@color/black"/>



    <EditText
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/edit_text"
        android:backgroundTint="@color/lightred"
        android:hint="@string/Email_Address"
        android:padding="20dp"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/edit_text"
        android:backgroundTint="@color/lightred">

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginEnd="60dp"
            android:autofillHints="password"
            android:background="@drawable/edit_text"
            android:backgroundTint="@color/lightred"
            android:hint="@string/Password"
            android:inputType="numberPassword"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:src="@drawable/img_1"
            android:layout_marginStart="100dp"/>

    </LinearLayout>



    <EditText
        android:textColor="@color/black"
        android:autofillHints="password"
        android:inputType="numberPassword"
        android:id="@+id/condirm_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/edit_text"
        android:backgroundTint="@color/lightred"
        android:hint="@string/Confirm_Password"
        android:padding="20dp"
        android:textColorHint="@color/gray"
        android:textSize="16sp" />

    <Button
        android:textStyle="bold"
        android:id="@+id/log_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/login"
        android:text="Log in"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAllCaps="false"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/OR"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/black" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/edit_text">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:src="@drawable/img"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_marginStart="30dp"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:text="@string/Google"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/edit_text">


        <ImageView
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:src="@drawable/img_2"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_marginStart="30dp"
            android:clickable="true"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/white"
            android:text="@string/Facebook"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="16sp"
            />
    </LinearLayout>



</LinearLayout>